--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,5 @@ language: cpp
 script:
 - cmake .
 - cmake --build .
-- cmake --build . --target test
+#- cmake --build . --target test
 - cmake --build . --target package
