package name & version

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,8 @@ add_executable(build_test main.cpp)
 
 SET(CPACK_GENERATOR "DEB")
 SET(CPACK_DEBIAN_PACKAGE_MAINTAINER "Ilia Sobolev")
+SET(CPACK_PROJECT_NAME "build_test")
+SET(CPACK_PROJECT_VERSION_MAJOR "0")
+SET(CPACK_PROJECT_VERSION_TWEAK "9")
 
 INCLUDE(CPack)
