--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,11 @@
+project(build_test)
 cmake_minimum_required(VERSION 3.2 FATAL_ERROR)
 add_executable(build_test main.cpp)
 
 SET(CPACK_GENERATOR "DEB")
 SET(CPACK_DEBIAN_PACKAGE_MAINTAINER "Ilia Sobolev")
-SET(CPACK_PROJECT_NAME "build_test")
-SET(CPACK_PROJECT_VERSION_MAJOR "0")
+#SET(CPACK_PROJECT_NAME "build_test")
+SET(CPACK_PACKAGE_VERSION_MAJOR "2")
 SET(CPACK_PROJECT_VERSION_TWEAK "9")
 
 INCLUDE(CPack)
