--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.2 FATAL_ERROR)
 
-if(TRAVIS_BUILD_NUMBER)
+if(DEFINED ENV{TRAVIS_BUILD_NUMBER})
 SET(VERSION_PATCH "$ENV{TRAVIS_BUILD_NUMBER}")
 else()
 SET(VERSION_PATCH "999")
