--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,10 @@ language: cpp
 script:
 - cmake .
 - cmake --build .
-#- cmake --build . --target test
+- cmake --build . --target test
 - cmake --build . --target package
 deploy:
   provider: script
   skip_cleanup: true
   script:
-  - curl -T buildtest-2.0.$TRAVIS_BUILD_NUMBER-Linux.deb -uElyas-Crimean:$BINTRAY_API_KEY "https://api.bintray.com/content/elyas-crimean/Elyas-otus/helloworld/$TRAVIS_BUILD_NUMBER/build_test-2.0.$TRAVIS_BUILD_NUMBER-Linux.deb;deb_distribution=trusty;deb_component=main;deb_architecture=amd64;publish=1"
+  - curl -T buildtest-2.0.$TRAVIS_BUILD_NUMBER-Linux.deb -uElyas-Crimean:$BINTRAY_API_KEY "https://api.bintray.com/content/elyas-crimean/Elyas-otus/helloworld/$TRAVIS_BUILD_NUMBER/buildtest-2.0.$TRAVIS_BUILD_NUMBER-Linux.deb;deb_distribution=trusty;deb_component=main;deb_architecture=amd64;publish=1"
